--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    compile 'me.dm7.barcodescanner:zxing:1.9'
+    compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
     compile('com.digits.sdk.android:digits:2.0.5@aar') {
         transitive = true;
